syntax = "proto3";

package review.v1;
option go_package = "github.com/titan-commerce/backend/review-service/proto/review/v1";

message Review {
  string review_id = 1;
  string product_id = 2;
  string user_id = 3;
  int32 rating = 4;
  string comment = 5;
  repeated string images = 6;
}

message CreateReviewRequest {
  string product_id = 1;
  string user_id = 2;
  int32 rating = 3;
  string comment = 4;
  repeated string images = 5;
}

message CreateReviewResponse {
  Review review = 1;
}

service ReviewService {
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
}
